# genshin-auto-skipper

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  genshin.rs  global_states.rs  main.rs
src/winapi_bindings/: bindings.rs  hooks.rs  message_manager.rs  mod.rs  utils.rs
