[package]
name = "genshin-auto-skipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "consoleapi", "errhandlingapi", "winbase"]
